[package]
name = "cesium-allocator"
description = "Allocator pool for managing sets of allocators"
authors = ["Sienna Lloyd <sienna@r3t.io>", "Cesium Allocator Maintainers"]
license = "GPL-3.0-only"
homepage = "https://github.com/shieldmaidens/cesium-allocator"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cesium-libmimalloc-sys = { path = "libmimalloc-sys", version = "2.1.2" }
